# libxml2-examples

./: CMakeLists.txt  Makefile  ajouter_noeud.c  catalogue.rng  catalogue.xml  catalogue.xsd  configuration.c  dom_ouvrir.c  dom_parcours.c  parcours.xml  refgen.php  refgen.rb  sax.c  sax_flux.c  sax_prix.c  supprimer_noeud.c  validation_dtd.c  validation_relaxng.c  validation_schema.c  xpath_count.c  xpath_nodeset.c  xpath_string.c
port/: asprintf.c  strndup.c
sauvegarde/: configuration.xml
